--- a/2024-2025/elsocucc.html
+++ b/2024-2025/elsocucc.html
@@ -4,9 +4,28 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <title>Görög</title>
     </head>
     <body>
-        
+        <div>
+            <h1>Kérjük adja meg a nevét:<input type="text" id="nev"></h1>
+        </div>
+        <br>
+        <div>
+            <h2>Voltál már Görögországban?</h2> 
+            <input type="checkbox" id="gorogi"> igen <br>
+            <input type="checkbox" id="gorogn"> nem 
+        </div>
+        <br>
+        <div>
+            <h2>Amennyiben volt kérjük írjon egy rövid értékelést róla! <input type="text" id="szoveg"></h2>
+        </div>
+        <script>
+            if(document.getElementById("gorogi"). === true)
+        {
+            console.log("asdsa")
+        }
+        </script>
     </body>
 </html>
