--- a/2024-2025/Bit/bitfaraggo/bit1.html
+++ b/2024-2025/Bit/bitfaraggo/bit1.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bitfaragó bajnokság</title>
+    <title>Bitfaragó első forduló</title>
     <link rel="stylesheet" href="bit2.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
 </head>
 <body onload="startTime()">
+  <div>
     <h1>Sajtos stangli</h1>
     <div id="txt"></div>
+  </div>
     <table>
         <tr>
             <td>
@@ -19,7 +21,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Konyhási Máté</h5>
                   <p class="card-text">A Kaposvári Szakképzési Centrum Nagyatádi Ady Endre Technikum és Gimnázium 12.C tanulója</p>
-                  <a href="#" class="btn btn-primary" onclick="nyomasMate()">Továbbiak</a>
+                  <button class="btn btn-success" onclick="nyomasMate()">Továbbiak</button>
                 </div>
               </div>
             </td>
@@ -29,7 +31,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Konyhási Máté</h5>
                   <p class="card-text">A Kaposvári Szakképzési Centrum Nagyatádi Ady Endre Technikum és Gimnázium 12.C tanulója</p>
-                  <a href="#" class="btn btn-primary" onclick="nyomasMatyi()">Továbbiak</a>
+                  <button class="btn btn-success" onclick="nyomasMatyi()">Továbbiak</button>
                 </div>
               </div>
             </td>
@@ -39,7 +41,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Konyhási Máté</h5>
                   <p class="card-text">A Kaposvári Szakképzési Centrum Nagyatádi Ady Endre Technikum és Gimnázium 12.C tanulója</p>
-                  <a href="#" class="btn btn-primary" onclick="nyomasAkos()">Továbbiak</a>
+                  <button class="btn btn-success" onclick="nyomasAkos()">Továbbiak</button>
                 </div>
               </div>
             </td>
@@ -49,7 +51,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Konyhási Máté</h5>
                   <p class="card-text">A Kaposvári Szakképzési Centrum Nagyatádi Ady Endre Technikum és Gimnázium 12.C Tanára</p>
-                  <a href="#" class="btn btn-primary" onclick="nyomasPepa()">Továbbiak</a>
+                  <button class="btn btn-success" onclick="nyomasPepa()">Továbbiak</button>
                 </div>
               </div>
             </td>
@@ -59,14 +61,14 @@
                 <div class="card-body">
                   <h5 class="card-title">Iskolánk</h5>
                   <p class="card-text">A Kaposvári Szakképzési Centrum Nagyatádi Ady Endre Technikum és Gimnázium (szeretett iskolánk)</p>
-                  <a href="#" class="btn btn-primary" onclick="nyomasAdy()">Továbbiak</a>
+                  <button class="btn btn-success" onclick="nyomasAdy()">Honlap</button>
                 </div>
               </div>
             </td>
         </tr>
     </table><br>
     <div id="bemutat"></div><br>
-    <button onclick="valtozas()">nyomj meg</button>
+    <button class="btn btn-success" onclick="valtozas()" id="gomb">Képek</button>
 
 
 
