--- a/2024-2025/Bit/bitfaraggo/1feladat.html
+++ b/2024-2025/Bit/bitfaraggo/1feladat.html
@@ -9,6 +9,11 @@
     
 </head>
 <body onload="startTime()">
+  <div class="topnav">
+    <a href="index.html">Kezdőlap</a>
+    <a class="active" href="1feladat.html">Első feladat</a>
+    <a href="2feladat.html">Második feladat</a>
+  </div>
   <div>
     <h1>Sajtos stangli</h1>
     <div id="txt"></div>
@@ -29,7 +34,7 @@
                 <div class="card" style="width: 22rem; text-align: center;">
                 <img src="..." class="card-img-top">
                 <div class="card-body">
-                  <h5 class="card-title">Konyhási Máté</h5>
+                  <h5 class="card-title">Holczer Mátyás</h5>
                   <p class="card-text">A Kaposvári Szakképzési Centrum Nagyatádi Ady Endre Technikum és Gimnázium 12.C tanulója</p>
                   <button class="btn btn-success" onclick="nyomasMatyi()">Továbbiak</button>
                 </div>
@@ -39,7 +44,7 @@
                 <div class="card" style="width: 22rem; text-align: center;">
                 <img src="..." class="card-img-top">
                 <div class="card-body">
-                  <h5 class="card-title">Konyhási Máté</h5>
+                  <h5 class="card-title">Keszericze Ákos</h5>
                   <p class="card-text">A Kaposvári Szakképzési Centrum Nagyatádi Ady Endre Technikum és Gimnázium 12.C tanulója</p>
                   <button class="btn btn-success" onclick="nyomasAkos()">Továbbiak</button>
                 </div>
@@ -49,7 +54,7 @@
                 <div class="card" style="width: 22rem; text-align: center;">
                 <img src="adytablo.jpg" class="card-img-top">
                 <div class="card-body">
-                  <h5 class="card-title">Konyhási Máté</h5>
+                  <h5 class="card-title">Papp Péter</h5>
                   <p class="card-text">A Kaposvári Szakképzési Centrum Nagyatádi Ady Endre Technikum és Gimnázium 12.C Tanára</p>
                   <button class="btn btn-success" onclick="nyomasPepa()">Továbbiak</button>
                 </div>
@@ -57,7 +62,7 @@
             </td>
             <td>
                 <div class="card" style="width: 22rem; text-align: center;">
-                <img src="adytablo.jpg" class="card-img-top">
+                <img src="adylogo.jpg" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Iskolánk</h5>
                   <p class="card-text">A Kaposvári Szakképzési Centrum Nagyatádi Ady Endre Technikum és Gimnázium (szeretett iskolánk)</p>
