sziasztok oliver vagyok

--- a/2024-2025/Bit/BitFarago2.0.html
+++ b/2024-2025/Bit/BitFarago2.0.html
@@ -9,7 +9,9 @@
 
   <body>
     <div>
-        Pontok:<p id="pontok">0</p>
+      Pontok:
+      <p id="pontok">0</p>
+      <p id = "lepesek"></p>
     </div>
     <script src="BitFarago2.0.js"></script>
   </body>
