--- a/2024-2025/online/elso/index.html
+++ b/2024-2025/online/elso/index.html
@@ -10,7 +10,7 @@
     <h1>Osztók Számlálása</h1>
     <h3>A számot 2 és 100 között kell megadni!</h3>
     <input type="number" id="szamBeker" placeholder="Kérlek add meg a számot" min="2" max="100"></input>
-    <button id="gomb">Mehet</button>
+    <button id="gomb" onclick="vizsga()">Mehet</button>
     <script src="script.js"></script>
   </body>
 </html>
