--- a/2024-2025/jqueryCuccos/index.html
+++ b/2024-2025/jqueryCuccos/index.html
@@ -24,7 +24,7 @@
             let oszlop = jQuery("<td>");
             oszlop.click(function()
           {
-            $(this).fadeToggle()
+            $(this).fadeTo("slow", 0.01)
           })
             oszlop.html(i * k);
             sor.append(oszlop)
