--- a/2024-2025/valamiJsonFetch.html
+++ b/2024-2025/valamiJsonFetch.html
@@ -4,43 +4,119 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <style>
+      body {
+        background-color: rgb(134, 128, 128);
+      }
+      .content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 500px;
+        height: 200px;
+        text-align: center;
+        background-color: #e8eae6;
+        box-sizing: border-box;
+        padding: 10px;
+        z-index: 100;
+        display: none;
+        /*to hide popup initially*/
+      }
+
+      .close-btn {
+        position: absolute;
+        right: 20px;
+        top: 15px;
+        background-color: black;
+        color: white;
+        border-radius: 50%;
+        padding: 4px;
+      }
+    </style>
   </head>
-  <body onload="init()">
+
+  <body>
+    <pre>
+a termékekkel (products) kell munkát végeznitöltsétek be a termékeket, és jelenítsétek meg a termékek nevét, képét leírását, valamilyen gyors, egyszerű css-sel megformázva. A képek ne legyenek túl nagyok!a termékekre kattintva az oldalon, a lista mellett mondjuk, jelenjen meg az ÖSSZES olyan adat, ami a felhasználóra tartozik, és semmi olyan ami csak a működéshez kell.a részleteket bemutató oldalon legyen egy ceruza ikon, amivel egy űrlapon lehet szerkeszteni az adatokat majd utána frissítenilegyen ugyanott egy kuka ikon, ami törli a szerverről (nem valós törlés lesz)ha nem mennek az ikonok, akkor sima gomb legyenlegyen egy "új termék" gomb, amivel új elemet lehet hozzáadni</pre
+    >
+    <div class="content">
+      <div onclick="togglePopup()" class="close-btn">&times</div>
+      <h3>Popup</h3>
+      <p></p>
+    </div>
+
     <script>
-      function init() {
-        let xhr = new XMLHttpRequest();
-        xhr.onload = function () {
-          let adatok = JSON.parse(this.responseText);
-          let kepUrl = adatok.results[0].picture.large;
-          let kep = document.createElement("img");
-          kep.src = kepUrl;
-          document.body.appendChild(kep);
-        };
-        xhr.open("GET", "https://randomuser.me/api");
-        xhr.send();
-
-        fetch("https://randomuser.me/api")
-          .then((x) => x.text())
-          .then((y) => {
-            let adatok2 = JSON.parse(y);
-            let kepUrl = adatok2.results[0].picture.large;
-            let kep = document.createElement("img");
-            kep.src = kepUrl;
-            document.body.appendChild(kep);
+      $.ajax({
+        url: "https://fakestoreapi.com/products",
+        dataType: "json",
+        success: function (data) {
+          console.log(data);
+          data.forEach((product) => {
+            console.log(product);
+            let kartya = termekKartya(
+              product.title,
+              product.image,
+              product.description,
+              product.id
+            );
+            $("#termekLista").append(kartya);
           });
+        },
+      });
 
-        fetch("https://randomuser.me/api")
-          .then((x) => {
-            console.log(x);
-            return x.json();
-          })
-          .then((adatok3) => {
-            let kepUrl = adatok3.results[0].picture.large;
-            let kep = document.createElement("img");
-            kep.src = kepUrl;
-            document.body.appendChild(kep);
+      function togglePopup() {
+        $(".content").toggle();
+      }
+
+      function termekKartya(nev, kepurl, leiras, id) {
+        let keret = jQuery("<div>");
+        keret.prop("class", "card");
+        keret.addClass("col-3");
+        keret.on("click", function () {
+          togglePopup();
+          $.ajax({
+            url: "https://fakestoreapi.com/products/"+id,
+            dataType: "json",
+            success: function () {
+              
+            },
           });
+        });
+
+        let kep = jQuery("<img>");
+        kep.prop("src", kepurl);
+        kep.prop("class", "card-img-top");
+        kep.prop("alt", nev);
+
+        let neve = jQuery("<h5>");
+        neve.html(nev);
+        neve.prop("class", "card-title");
+
+        let leir = jQuery("<p>");
+        leir.html(leiras);
+        leir.prop("class", "card-text");
+
+        let cardBody = jQuery("<div>");
+        cardBody.prop("class", "card-body");
+
+        cardBody.append(neve);
+        cardBody.append(leir);
+        keret.append(kep);
+        keret.append(cardBody);
+
+        return keret;
       }
     </script>
+    <div class="container">
+      <div class="row" id="termekLista"></div>
+    </div>
   </body>
 </html>
