--- a/2024-2025/holegCucc/index.html
+++ b/2024-2025/holegCucc/index.html
@@ -13,8 +13,8 @@
     <title>Hőlégballon</title>
   </head>
   <body>
-    <header class="container d-flex align-items-center">
-         <div class="row">
+    <header class="container ">
+         <div class="row align-items-center h-100">
             <div class="col-1"></div>
             <div class="col-10">
                 <h1>Hőlégballon</h1>
