--- a/2024-2025/holegCucc/services.html
+++ b/2024-2025/holegCucc/services.html
@@ -13,14 +13,15 @@
     <title>Hőlégballon</title>
   </head>
   <body>
-
-
-
-
-
-
-
-
+    <header class="container">
+         <div class="row align-items-center h-100">
+            <div class="col-1"></div>
+            <div class="col-10">
+                <h1>Hőlégballon<div>Szolgáltatások</div></h1>
+            </div>
+            <div class="col-1"></div>
+        </div>
+    </header>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
