--- a/2024-2025/holegCucc/services.html
+++ b/2024-2025/holegCucc/services.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Hőlégballon</title>
+    <title>Service</title>
   </head>
   <body>
     <header class="container">
@@ -22,29 +22,30 @@
             <div class="col-1"></div>
         </div>
     </header>
-    <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container" id="navBar">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Hőlégballon</a>
+          <a class="navbar-brand text-white" href="index.html">Hőlégballon</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html#felepites">Felépítés</a>
+                <a class="nav-link active text-white" aria-current="page" href="index.html#felepites">Felépítés</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html#tortenet">Történet</a>
+                <a class="nav-link text-white" href="index.html#tortenet">Történet</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="services.html">Árak, Szolgáltatások</a>
+                <a class="nav-link text-white" href="services.html">Árak, Szolgáltatások</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </div>
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
