--- a/2024-2025/holegCucc/index.html
+++ b/2024-2025/holegCucc/index.html
@@ -9,6 +9,8 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="css/styles.css" />
     <title>Hőlégballon</title>
   </head>
@@ -33,8 +35,8 @@
             data-bs-target="#navbarNav"
             aria-controls="navbarNav"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
+
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -92,7 +94,7 @@
             szél különböző magasságokban más-más irányból fúj.
           </p>
         </div>
-        <div class="col-3">
+        <div class="col-3 text-center">
           <img src="forras/img/reszei.jpg" alt="randomkép" class="col-12 mb-3 rounded" id="reszeiKep" />
         </div>
       </div>
@@ -144,7 +146,7 @@
 
           <a
             href="https://hu.wikipedia.org/wiki/H%C5%91l%C3%A9gballon"
-            class="btn btn-outline-info"
+            class="btn btn-outline-info float-end"
             target="_blank"
             >További részletek</a
           >
@@ -156,8 +158,8 @@
           <div class="card">
             <img src="forras/img/bristol.jpg"alt="masikrandomkép"class="col-12"/>
             <div class="card-body">
-              <p>Hőlégballon Fesztivál Bistrol-ban</p>
-              <a href="https://bristolballoonfiesta.co.uk/"class="btn btn-outline-info" target="_blank">Részletek a fesztiválról</a>
+              <p class="card-text text-center">Hőlégballon Fesztivál Bistrol-ban</p>
+              <a href="https://bristolballoonfiesta.co.uk/"class="btn btn-outline-info float-end" target="_blank">Részletek a fesztiválról</a>
             </div>
           </div>
 
@@ -191,12 +193,12 @@
         </div>
       </div>
     </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
