--- a/2024-2025/holegCucc/services.html
+++ b/2024-2025/holegCucc/services.html
@@ -9,6 +9,8 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="css/styles.css" />
     <title>Service</title>
   </head>
@@ -45,13 +47,40 @@
         </div>
       </nav>
     </div>
-
-
+    <div class="container">
+      <div class="table-responsive">
+        <table class="table table-bordered border-dark table-striped col-12" id="tablazat">
+          <thead>
+            <tr>
+              <th colspan="2" class="col-9">Megnevezés</th>
+              <th class="col-3">Ár</th>
+            </tr>
+          </thead>
+        <tbody>
+          <tr>
+              <td rowspan="2" class="col-6 sorcim">Hőlégballonos sétarepülő jegy</td>
+              <td class="col-3">Felnőtt</td>
+              <td class="col-3">40.000 Ft/fő</td>
+          </tr>
+          <tr>
+              <td class="col-3">Gyerek (10-14 év)</td>
+              <td class="col-3">28.000 Ft/fő</td>
+          </tr>
+          <tr>
+              <td class="col-6 sorcim">Privát/romantikus repülés</td>
+              <td class="col-3"></td>
+              <td class="col-3">70.000 Ft/2 fő</td>
+          </tr>
+       </tbody>
+        </table>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
