--- a/2025-2026/digiKult/konyvkiadas.html
+++ b/2025-2026/digiKult/konyvkiadas.html
@@ -5,22 +5,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Könyv kiadás</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
     <h1>
         Könyv kiadás
     </h1>
-    <label for="szerzonev">Szerző:</label> <input type="text" class="" id="szerzonev"><input type="button" onclick=""
-        value="Keresés" class="btn btn-info">
+    <label for="szerzonev">Szerző:</label>
+    <input type="text" class="" id="szerzonev">
+    <input type="button" onclick="feladat2()" value="Keresés" class="btn btn-info">
+    <div id="eredmeny2"></div>
+
+    <label>Legnagyobb példányszám:</label>
+    <input type="button" onclick="feladat3()" value="Keresés" class="btn btn-info">
+    <div id="eredmeny3"></div>
+
     <script>
+        let adatok = []
         fetch("kiadas2.json")
             .then((res) => res.json())
-            .then((adatok) => {
-                console.log(adatok)
-            });
+            .then((json) => adatok = json);
+
+        
+        function feladat2() {
+            let nev = document.querySelector("#szerzonev").value
+            let nevdarab = nev.split(" ");
+            let kulfoldiNev = nevdarab.toReversed().join(", ")
+
+            let talalat = adatok.filter(e => (e.mu.includes(nev) || e.mu.includes(kulfoldiNev)))
+            let doboz = document.getElementById("eredmeny2")
+            if (talalat.length == 0) {
+                doboz.innerHTML = "Ninsc találat!"
+            }
+            else {
+                doboz.innerHTML = talalat.length + " könyvkiadás";
+            }
+        }
+
+        function feladat3() {
+            let legnagyobb = adatok.map(e => e.peldanyszam).toSorted(function(a, b){return b-a})[0]; //b-a Csökkenő a-b Növekvő
+            let legnagyobb2 = Math.max(...adatok.map(e=>e.peldanyszam))
+            let talalatok = adatok.filter(e=> e.peldanyszam == legnagyobb);
+            
+            document.getElementById("eredmeny3").innerHTML = "Legnagyobb példányszám "+talalatok[0].peldanyszam+""
+        }
+
+
+
+
+
+
+
     </script>
 </body>
 
