--- a/2025-2026/digiKult/konyvkiadas.html
+++ b/2025-2026/digiKult/konyvkiadas.html
@@ -42,7 +42,7 @@
         fetch("kiadas2.json")
             .then((res) => res.json())
             .then((json) => adatok = json);
-
+        console.log(adatok)
 
         function feladat2() {
             let nev = document.querySelector("#szerzonev").value
